Dark mode CSS – Fix Select Icons (color)
The teambuilder update looks cool and I'd like to fix this icon, it should be dark

https://prnt.sc/gxo8i2

--- a/style/client.css
+++ b/style/client.css
@@ -3318,6 +3318,14 @@ a.ilink.yours {
 	border-color: #CCC;
 }
 
+.dark .select:after {
+	color: #000000;
+}
+
+.dark .select:disabled:after {
+	color: #000000;
+}
+
 /* chat */
 
 .dark .userlist strong,
